# datalink-sqlite

./: Cargo.toml
src/: database.rs  error.rs  init_db.sql  lib.rs  migration.rs  query.rs  storable.rs  storeddata.rs  util.rs
src/migrations/: 1.sql  2a.sql  2b.sql
