[package]
name = "datalink_sqlite"
version = "0.1.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["migrations"]
migrations = []


[dependencies]
datalink = { git = "https://github.com/SebastianSpeitel/datalink", version = "0.3", features = [
    "random",
    "unique",
], tag = "v0.3.2" }
log = "*"
rusqlite = { version = "0.31", features = [] }
thiserror = "1.0"

[dev-dependencies]
env_logger = "*"
