[package]
name = "datalink_sqlite"
version = "0.1.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["migrations"]
migrations = []


[dependencies]
datalink = { git = "https://github.com/SebastianSpeitel/datalink", version = "0.4", features = [
    "random",
    "unique",
], rev = "93978a22925df1c3e2e6309382238ec25d4e81d2" }
log = "*"
rand = "0.8"
rusqlite = { version = "0.32", features = [] }
thiserror = "1.0"

[dev-dependencies]
env_logger = "*"
